docs: revise the embedding plan after review (CHAT-etfnihnu)
The owner reviewed 9b11b7ab and found eight defects and five corrections.

1. Task 2 named both modules in the reactor before Task 3 created the
   second directory. A reactor entry with no directory fails every build.
   Each task now adds its own entry.

2. The openai properties accepted a blank value, which contradicts the
   nonblank key policy. Each property now carries an empty default, and one
   function rejects a blank value and names the property. The base URL test
   also named the wrong api key property. Two table driven tests replace
   the three, and they cover absent and blank for all three properties.

3. Task 5 called succeededJob and policyOver, which do not exist. The tests
   now extend the job helper that the class carries and use its store and
   its policy helper. Two legacy decode tests are new, one for the JSON
   string shape and one for the map shape.

4. The gate sent the wrong JSON. MessageSendRequest carries msg, from and
   dest, and RequestResponse needs the type discriminator. The route
   declares CREATED, so it answers 201 and not 200.

5. The classpath checks were not reactor safe. Both now install the reactor
   first, because a -pl run resolves every com.demo dependency from ~/.m2
   and both provider modules are new. Rule two no longer sends Maven output
   to /dev/null, because a silent resolution failure writes no file and a
   rule that reads no file reports a false pass. The Task 6 check used
   grep -c, which exits 1 when it counts zero. It now uses grep -q inside
   an if.

6. Task 4 tested only the companion functions. A hardcoded name inside
   either bean would pass every test. Two wiring proofs are new. The
   embedded proof builds the bean and asserts the directory on disk. The
   redis proof builds the bean, writes one document, and asserts the key
   prefix through Jedis. One step mutates each bean and states the expected
   failure.

7. Task 10 piped eac